@@ -6,6 +6,8 @@ Date: 28. 05. 2022
     - Verify world has an valid arena to prevent this mod accidentally staying active after done playing.
   Changes:
     - All arenas are now covered by radar.
+  Bugfixes:
+    - Admin players now also have full permissions.
 ---------------------------------------------------------------------------------------------------
 Version: 0.3.2
 Date: 28. 05. 2022
